@@ -1,14 +1,10 @@
 package dataAccess;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashMap;
-import java.util.List;
-import org.apache.http.client.methods.HttpGet;
-import org.apache.http.impl.client.CloseableHttpClient;
-import org.apache.http.impl.client.HttpClients;
 import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
 
 import models.Employee;
 
@@ -16,79 +12,25 @@ import models.Employee;
 //https://www.mkyong.com/java/jackson-2-convert-java-object-to-from-json/
 
 public class EmployeeAccess extends RestRequest {
-	
-    private static ObjectMapper mapper = new ObjectMapper();
-	
-	
 	// Get an employee by ID
-	public static Employee getEmployee(Integer employeeID) {
-		try {			
-			String JSONEmp = getEmployees(employeeID, null, new URL(Constants.EMPLOYEE_SOURCE));
-			return mapper.readValue(JSONEmp, Employee.class);
-			
-		} catch (Exception e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-			return null;
-		}
-	}	
-	
-	// Get all employees working for specified manager
-	public static List<Employee> getEmployeesByManager(Integer managerID) {
-		try {
-			String JSONEmps = getEmployees(null, managerID, new URL(Constants.EMPLOYEE_SOURCE + "m"));
-			return mapper.readValue(JSONEmps, new TypeReference<List<Employee>>(){});
-			
-		} catch (Exception e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-			return null;
-		}		
-	}	
-	
-	// Get all employees
-	public static HashMap<Integer, Employee> getAllEmployees() {
-		try {
-			String JSONEmps = getEmployees(null, null, new URL(Constants.EMPLOYEE_SOURCE));
-			return mapper.readValue(JSONEmps, new TypeReference<HashMap<Integer, Employee>>(){});
-		} catch (Exception e) {
-			// TODO Auto-generated catch block
-			e.printStackTrace();
-			return null;
-		}
+	public static Employee get(Integer employeeID) throws IOException, URISyntaxException {
+		String JSONEmp = getAllOrOne(new URI(Constants.EMPLOYEE_SOURCE + employeeID));
+		return mapper.readValue(JSONEmp, Employee.class);
 	}
-	
-    private static String getEmployees(Integer employeeID, Integer managerID, URL source) throws Exception {
-        CloseableHttpClient httpclient = HttpClients.createDefault();
-        try {        	
-            HttpGet httpget = null;
-            if (employeeID == null && managerID == null) {
-            	httpget = new HttpGet(source.toString());
-            }
-            else if (employeeID != null) {			
-				httpget = new HttpGet(source.toString() + employeeID); 
-			}
-            else {
-            	httpget = new HttpGet(source.toString() + managerID); 
-            }
-            System.out.println("Executing request " + httpget.getRequestLine());
 
-            
-            
-            String responseBody = httpclient.execute(httpget, responseHandler);
-            System.out.println("----------------------------------------");
-            System.out.println(responseBody);                   
-            return responseBody;
-        } 
-        
-        catch (IOException e) {
-        	System.out.println("Can't connect to the dataservice.");
-        	return null;
-		}	
-        
-        finally {
-            httpclient.close();
-        }
-    }
+	// Get all employees working for specified manager
+	public static HashMap<Integer, Employee> getByManager(Integer managerID) throws IOException, URISyntaxException {		
+			String JSONEmps = getAllOrOne(new URI(Constants.EMPLOYEE_SOURCE + managerID + "/manages"));
+			HashMap<Integer, Employee> employees =  mapper.readValue(JSONEmps, new TypeReference<HashMap<Integer, Employee>>() {
+			});			
+			return employees;
+	}
 
+	// Get all employees
+	public static HashMap<Integer, Employee> getAllEmployees() throws IOException, URISyntaxException {
+		String JSONEmps = getAllOrOne(new URI(Constants.EMPLOYEE_SOURCE));
+		HashMap<Integer,Employee> employees =  mapper.readValue(JSONEmps, new TypeReference<HashMap<Integer, Employee>>() {
+		});		
+		return employees;	
+	}
 }
